# dungeon-mark

./: Cargo.toml  LICENSE  README.md
crates/dmark/: Cargo.toml
crates/dmark-foundry-journal/: Cargo.toml
crates/dmark-foundry-journal/src/: main.rs
crates/dmark/src/: main.rs
crates/dungeon-mark/: Cargo.toml
crates/dungeon-mark/src/: config.rs  lib.rs
crates/dungeon-mark/src/cmark/: parser.rs
crates/dungeon-mark/src/model/: mod.rs
crates/dungeon-mark/src/model/journal/: entry.rs  mod.rs
data/: journal.toml
src/: cmark.rs  compendium.rs  config.rs  document.rs  journal.rs  lib.rs  parser.rs  preprocessor.rs  renderer.rs
src/cmark/: parser.rs
src/compendium/: compendium.rs  document.rs  journal.rs
src/document/: mod.rs
src/journal/: entry.rs  journal.rs  mod.rs  toc.rs
src/model/: mod.rs  toc.rs
src/model/journal/: entry.rs  mod.rs
src/preprocess/: mod.rs
src/preprocessor/: metadata.rs
src/transform/: metadata.rs  mod.rs
tests/: Cargo.toml  config_loading.rs  journal_loading.rs
tests/common/: mod.rs
tests/journal/: journal.toml  main.rs
tests/journal/journal/: entry_1.md
tests/journal_loading/: journal.toml  main.rs
tests/journal_loading/src/: JOURNAL.md
